[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "list_ext"
version = "0.0.3"
authors = [{ name = "Samuele Baffo", email = "pitto.developer@gmail.com" }]
description = "A package that extends list object"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pitt0/list_ext"
"Repository" = "https://github.com/pitt0/list_ext"

